[package]
name = "espresso-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"

