[package]
name = "espresso-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-recursion = "1.0.5"
hex = "0.4.3"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

